--- a/app/src/main/res/menu/navigation_home.xml
+++ b/app/src/main/res/menu/navigation_home.xml
@@ -32,7 +32,7 @@
     <item
         android:id="@+id/navigation_assignment"
         android:icon="@drawable/ic_prac_v1"
-        android:title="Assignment"
+        android:title="Notes"
         android:visible="true"
         app:showAsAction="always|withText"/>
 </menu>
